# SPINE

./: .gitignore  ARCHITECTURE.md  BENCHMARK_REPORT.md  CHANGELOG.md  Cargo.toml  Dockerfile  HLS_SPEC.md  LEGACY.md  LICENSE  MATHEMATICAL_PROOFS.md  OPTIMIZATIONS.md  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  THREAT_MODEL.md  audit4.txt  build_output.txt  deny.toml  docker-compose.yml  paper.typ  test_list.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
deploy/grafana/: spine-dashboard.json
deploy/prometheus/: prometheus.yml
docs/: book.toml
docs/blog/: 2026-06-08-announcing-spine.md
docs/book/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-e9d9344b.js  toc-476c3948.js  toc.html
docs/src/: SUMMARY.md  introduction.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
formal/audit/: CRYPTO_AUDIT.md
formal/misra/: MISRA_COMPLIANCE.md
formal/tamarin/: SpineKeyExchange.spthy
formal/tla/: ChameleonProtocol.tla  ChameleonProtocol_MC.tla  MeshRouting.tla  MeshRouting_MC.tla
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_frame_decode.rs  fuzz_frame_header.rs  fuzz_hls_compile.rs  fuzz_latent_vector.rs  fuzz_message_deser.rs  fuzz_negotiation.rs  fuzz_parse_html.rs  fuzz_semver_parse.rs
hyperlight-agent/: Cargo.toml
hyperlight-agent/examples/: autonomous_agent.rs  knowledgeable_agent.rs  simple_agent.rs  swarm_demo.rs
hyperlight-agent/src/: lib.rs
hyperlight-agentic/: Cargo.toml
hyperlight-agentic/examples/: advanced_agentic.rs  agentic_autonomous.rs  agentic_web_demo.rs  cognitive_demo.rs  communication_demo.rs  infrastructure_demo.rs  learning_demo.rs  neural_protocol_demo.rs  swarm_intelligence.rs
hyperlight-agentic/src/: lib.rs
hyperlight-browser/: Cargo.toml
hyperlight-browser/src/: main.rs
hyperlight-cluster/: Cargo.toml
hyperlight-cluster/src/: lib.rs
hyperlight-compiler/: Cargo.toml
hyperlight-compiler/src/: lib.rs
hyperlight-core/: Cargo.toml
hyperlight-core/src/: main.rs  telemetry.rs  tls.rs  vdom.rs
hyperlight-crypto/: Cargo.toml
hyperlight-crypto/examples/: miras_demo.rs
hyperlight-crypto/src/: lib.rs
hyperlight-human/: Cargo.toml
hyperlight-human/src/: lib.rs
hyperlight-neural/: Cargo.toml
hyperlight-neural/src/: lib.rs
hyperlight-parser/: Cargo.toml
hyperlight-parser/src/: lib.rs
hyperlight-protocol/: Cargo.toml
hyperlight-protocol/examples/: chameleon_demo.rs
hyperlight-protocol/src/: lib.rs
hyperlight-wasm/: Cargo.toml
hyperlight-wasm/src/: lib.rs
paper/: paper.typ
scripts/: analyze_lib.py  apply_ontology.py  apply_phase18.py  apply_phase19.py  bench.ps1  bench.sh  coverage.sh  demo.ps1  deploy.sh  fix_agent_did.ps1  fix_agent_did2.ps1  fix_import.py  fix_refs.ps1  patch_gateway.py  trim_lib.ps1  update_phase18_docs.py  update_phase19_docs.py  update_phase20_docs.py  verify_proofs.py
spine-agent/: Cargo.toml
spine-agent/examples/: agent_autonomous.rs  batch_scraper.rs  encrypted_agent.rs  hls_executor.rs  knowledgeable_agent.rs  latent_analysis.rs  reconnect_agent.rs  simple_agent.rs  swarm_demo.rs  web_intelligence_demo.rs  websocket_agent.rs
spine-agent/src/: lib.rs
spine-agentic/: Cargo.toml
spine-agentic/benches/: scalability_bench.rs
spine-agentic/examples/: advanced_agentic.rs  adversarial_demo.rs  agentic_autonomous.rs  agentic_web_demo.rs  cognitive_demo.rs  communication_demo.rs  first_agentic_web.rs  graphical_swarm_demo.rs  infrastructure_demo.rs  learning_demo.rs  neural_protocol_demo.rs  social_swarm_demo.rs  swarm_intelligence.rs
spine-agentic/src/: contract.rs  identity.rs  lib.rs  lifecycle.rs  mesh.rs  sandbox.rs
spine-browser/: Cargo.toml
spine-browser/src/: main.rs
spine-cache/: Cargo.toml
spine-cache/src/: lib.rs
spine-cli/: Cargo.toml
spine-cli/src/: main.rs
spine-cli/src/commands/: connect.rs  deploy.rs  mod.rs  query.rs  status.rs
spine-cli/tests/: cli_tests.rs
spine-cluster/: Cargo.toml
spine-cluster/src/: lib.rs  marketplace.rs  raft.rs  sybil.rs
spine-compiler/: Cargo.toml
spine-compiler/src/: lib.rs
spine-core/: Cargo.toml
spine-core/src/: config.rs  lib.rs  main.rs  telemetry.rs  tls.rs  vdom.rs
spine-crypto/: Cargo.toml
spine-crypto/examples/: miras_demo.rs
spine-crypto/src/: lib.rs
spine-crypto/tests/: proptest_crypto.rs
spine-ffi/: Cargo.toml
spine-gateway/src/: main.rs
spine-go/: README.md  spine.go
spine-gpu/src/: lib.rs
spine-human/: Cargo.toml
spine-human/src/: lib.rs
spine-js/: Cargo.toml
spine-js/src/: lib.rs
spine-k8s/: Cargo.toml
spine-k8s/src/: lib.rs
spine-kernel/: Cargo.toml
spine-kernel/benches/: kernel_bench.rs
spine-kernel/src/: alloc.rs  atomic.rs  cache.rs  kani_harnesses.rs  lib.rs  ring.rs  simd.rs  syscall.rs  time.rs  uring.rs
spine-knowledge/: Cargo.toml
spine-knowledge/src/: lib.rs  persistence.rs
spine-neural/: Cargo.toml
spine-neural/src/: lib.rs
spine-parser/: Cargo.toml
spine-parser/src/: lib.rs
spine-parser/tests/: proptest_parser.rs
spine-protocol/: Cargo.toml
spine-protocol/examples/: chameleon_demo.rs
spine-protocol/src/: lib.rs  replay.rs
spine-protocol/tests/: chaos.rs  integration.rs  proptest_protocol.rs
spine-python/: Cargo.toml  pyproject.toml
spine-python/src/: lib.rs
spine-recursive/: Cargo.toml
spine-recursive/benches/: rlm_bench.rs
spine-recursive/examples/: infinite_context.rs  rlm_demo.rs
spine-recursive/src/: lib.rs  llm_dispatchers.rs
spine-storage/: Cargo.toml
spine-storage/src/: lib.rs
spine-stream/: Cargo.toml
spine-stream/benches/: stream_bench.rs
spine-stream/src/: channel.rs  chunk.rs  flow.rs  lib.rs  multiplex.rs  priority.rs  reactive.rs
spine-transport/: Cargo.toml
spine-transport/benches/: network_realistic.rs  tcp_comparison.rs  traditional_comparison.rs
spine-transport/src/: buffer.rs  coalesce.rs  congestion.rs  connection.rs  frame.rs  lib.rs  metrics.rs  pool.rs  uring.rs  websocket.rs
spine-transport/tests/: proptest_transport.rs
spine-wasm/: Cargo.toml
(+223 files in other folders)
