[workspace]
members = [
    "hyperlight-core",
    "hyperlight-parser",
    "hyperlight-protocol",
    "hyperlight-agent",
    "hyperlight-compiler",
    "hyperlight-wasm",
    "hyperlight-cluster",
    "hyperlight-neural",
    "hyperlight-crypto",
    "hyperlight-human",
    "hyperlight-browser",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hyperlight Team"]
description = "An agentic AI web browser stack"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
wasmtime = "27"
wat = "1"
rand = "0.8"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
prometheus = "0.13"
lazy_static = "1.4"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
