[workspace]
members = [
    "spine-core",
    "spine-parser",
    "spine-protocol",
    "spine-agent",
    "spine-compiler",
    "spine-wasm",
    "spine-cluster",
    "spine-neural",
    "spine-crypto",
    "spine-human",
    "spine-browser",
    "spine-agentic",
    "spine-transport",
    "spine-stream",
    "spine-recursive",
    "spine-knowledge",
    "spine-kernel",
    "spine-cli",
    "spine-gateway",
    "spine-gpu",
    "spine-storage",
    "spine-cache",
    "spine-k8s",
]
exclude = ["spine-python", "spine-js"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Nervosys LLC"]
description = "A bioinspired agentic AI web stack"
license = "Apache-2.0"
repository = "https://github.com/nervosys/SPINE"

# =============================================================================
# MAXIMUM OPTIMIZATION PROFILE
# =============================================================================

[profile.release]
opt-level = 3     # Maximum optimization
lto = "fat"       # Full link-time optimization across all crates
codegen-units = 1 # Single codegen unit for maximum optimization
panic = "abort"   # Smaller binaries, no unwinding overhead
strip = true      # Strip symbols for smaller binaries
debug = false     # No debug info in release

[profile.release-with-debug]
inherits = "release"
debug = true         # Debug info for profiling
strip = false

[profile.bench]
inherits = "release"
debug = true         # Debug info for flamegraphs

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", features = ["json"] }
wasmtime = "27"
wat = "1"
rand = "0.8"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
prometheus = "0.13"
lazy_static = "1.4"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
