[package]
name = "hyperlight-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Agent interface for Hyperlight"

[dependencies]
hyperlight-protocol = { path = "../hyperlight-protocol" }
hyperlight-parser = { path = "../hyperlight-parser" }
hyperlight-compiler = { path = "../hyperlight-compiler" }
hyperlight-wasm = { path = "../hyperlight-wasm" }
hyperlight-cluster = { path = "../hyperlight-cluster" }
hyperlight-human = { path = "../hyperlight-human" }
hyperlight-agentic = { path = "../hyperlight-agentic" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls-native-certs = "0.6"
uuid = { version = "1.0", features = ["v4", "serde"] }
