[package]
name = "hyperlight-agentic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Agentic Web Stack - A new paradigm for agent-native web interaction"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
rand.workspace = true
sha2.workspace = true

# Internal dependencies
hyperlight-neural = { path = "../hyperlight-neural" }
hyperlight-crypto = { path = "../hyperlight-crypto" }
hyperlight-protocol = { path = "../hyperlight-protocol" }
hyperlight-compiler = { path = "../hyperlight-compiler" }

# Agent-specific
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
petgraph = "0.6"
url = { version = "2.5", features = ["serde"] }
regex = "1.10"
futures = "0.3"

[[example]]
name = "agentic_web_demo"
path = "examples/agentic_web_demo.rs"

[[example]]
name = "autonomous_agent"
path = "examples/autonomous_agent.rs"

[[example]]
name = "swarm_intelligence"
path = "examples/swarm_intelligence.rs"

[[example]]
name = "advanced_agentic"
path = "examples/advanced_agentic.rs"
