[package]
name = "hyperlight-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
hyperlight-agent = { path = "../hyperlight-agent" }
hyperlight-human = { path = "../hyperlight-human" }
hyperlight-wasm = { path = "../hyperlight-wasm" }
hyperlight-protocol = { path = "../hyperlight-protocol" }
hyperlight-cluster = { path = "../hyperlight-cluster" }
hyperlight-agentic = { path = "../hyperlight-agentic" }
eframe = "0.28"
egui = "0.28"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }
