[package]
name = "spine-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Agent interface for SPINE"

[dependencies]
spine-protocol = { path = "../spine-protocol" }
spine-parser = { path = "../spine-parser" }
spine-compiler = { path = "../spine-compiler" }
spine-wasm = { path = "../spine-wasm" }
spine-cluster = { path = "../spine-cluster" }
spine-human = { path = "../spine-human" }
spine-agentic = { path = "../spine-agentic" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls-native-certs = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }



