[package]
name = "spine-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for the SPINE agentic web stack"

[[bin]]
name = "spine"
path = "src/main.rs"

[dependencies]
spine-agent = { path = "../spine-agent" }
spine-protocol = { path = "../spine-protocol" }
spine-parser = { path = "../spine-parser" }
spine-core = { path = "../spine-core" }
spine-transport = { path = "../spine-transport" }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
toml = "0.8"
colored = "2"
indicatif = "0.17"
tabled = "0.16"
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true }
rustls-pemfile = "2"
tokio-rustls = { workspace = true }
