[package]
name = "spine-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Distributed agent coordination for SPINE"

[dependencies]
spine-protocol = { path = "../spine-protocol" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
dashmap = "5.5"
uuid = { version = "1", features = ["v4", "serde"] }
rand.workspace = true



