[package]
name = "spine-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Advanced cryptographic primitives for SPINE including transformer prediction and post-quantum key evolution"

[dependencies]
spine-neural = { path = "../spine-neural" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
rand.workspace = true
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
subtle = "2.5"

[dev-dependencies]
proptest = "1.4"
