[package]
name = "spine-human"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
spine-compiler = { path = "../spine-compiler" }
spine-parser = { path = "../spine-parser" }
spine-protocol = { path = "../spine-protocol" }
scraper = "0.18"
ego-tree = "0.6"
cssparser = "0.31"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rand = "0.8"



