[package]
name = "spine-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Distributed knowledge base with bioinspired memory architecture for SPINE"
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true

# Internal dependencies - unified memory architecture
spine-neural = { path = "../spine-neural" }
spine-storage = { path = "../spine-storage" }
anyhow.workspace = true

# CRDTs for distributed consistency
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
sha2 = "0.10"

# Semantic similarity and indexing
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"



