[package]
name = "spine-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Low-latency communication protocols for SPINE"

[features]
default = ["quic"]
quic = ["dep:quinn", "dep:rcgen", "dep:rustls-pki-types", "dep:rustls-quic"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
# For high throughput, maybe tonic (gRPC) or a custom binary protocol
# For now, let's stick to basic networking
bytes = "1.5"
zstd = "0.12"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
spine-neural = { path = "../spine-neural" }
spine-crypto = { path = "../spine-crypto" }
rustls.workspace = true
tokio-rustls.workspace = true
# High-performance binary serialization (5-10x faster than JSON)
bincode = "1.3"
bytemuck = { version = "1.14", features = ["derive"] }

# QUIC transport (optional, for fallback/0-RTT connections)
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.12", optional = true }
rustls-pki-types = { version = "1.0", optional = true }
# Separate rustls for QUIC (quinn requires 0.23+)
rustls-quic = { package = "rustls", version = "0.23", optional = true, default-features = false, features = [
    "ring",
    "std",
] }
